# simcradarlib

./: .gitignore  .moncic-ci.yml  README.md  setup.cfg
fedora/SPECS/: simcradarlib.spec
simcradarlib/: __init__.py
simcradarlib/cli/: vadprofiles_hdf2bufr.py
simcradarlib/geo_utils/: __init__.py  georef.py
simcradarlib/io_utils/: __init__.py  bufr_class.py  exporters.py  general_reader_utils.py  rad_var_class.py  read_rad2d_nc.py  read_rad2d_zlr.py  structure_class.py
simcradarlib/log_utils/: __init__.py  log_exec_process.py
simcradarlib/odim/: __init__.py  odim_image.py  odim_operations.py  odim_pvol.py  odim_utils.py  odim_vprof.py
simcradarlib/visualization/: __init__.py  config_plot.yml  plot_ppi.py
tests/: runtests.py
