[metadata]
name = simcradarlib
version = attr: simcradarlib.__version__
description = TODO
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ARPA-SIMC/simcradarlib
license = GPLv3
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv3

[options]
python_requires = >=3.6
packages = find:
install_requires =
    numpy
    pandas
    netCDF4
    pyproj
    h5py
    cftime
    matplotlib
    pyyaml
    matplotlib
    gdal

[options.packages.find]
include =
    simcradarlib
    simcradarlib.*
